# Prediction-Market-Forecaster

./: .env  build_dataset.py  gru_model_prelim.ipynb  pyproject.toml  train_baseline.ipynb  xgb_model.ipynb
data/duckdb/: pmml.duckdb
data/silver_features/: features_0000.parquet  features_0001.parquet  features_0002.parquet  features_0003.parquet  features_0004.parquet  features_0005.parquet  features_0006.parquet  features_0007.parquet  features_0008.parquet
