[project]
name = "prediction-market-forecaster"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "ipykernel (>=7.1.0,<8.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "xgboost (>=3.1.2,<4.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "fastparquet (>=2025.12.0,<2026.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "dome-api-sdk (>=0.1.5,<0.2.0)",
    "duckdb (>=1.4.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
